# desktop-pet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: config.json
data/: save.json
docs/: plan.md
src/: app.rs  main.rs
src/animation/: mod.rs  player.rs
src/game/: config.rs  mod.rs  save_data.rs  types.rs
src/input/: handler.rs  mod.rs
src/interaction/: bubble.rs  menu.rs  mod.rs  notification.rs
src/pet/: entity.rs  mod.rs  state_machine.rs
src/renderer/: draw.rs  mod.rs
src/ui/: hud.rs  mod.rs
src/window/: layered.rs  mod.rs  transparent.rs
tools/: gen_placeholder.py
tools/platform/: README.md  index.html  启动生成器.ps1
