[package]
name = "desktop-pet"
version = "0.1.0"
edition = "2021"
description = "A desktop pet that walks along your screen edge"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Performance",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
strip = true

